Clock.cpp, deque.cpp, stats_quantile.cpp: remove compilation warnings
deptool.in: symlink to current.html otherwise the type isn't inferred properly by the web server

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -2462,8 +2462,8 @@ sub mtnServePushTo {
 $output
 </PRE>
 END
-            unlink("$rebuild_log/current");
-            symlink($outpath, "$rebuild_log/current") or die "symlink failed: $!";
+            unlink("$rebuild_log/current.html");
+            symlink($outpath, "$rebuild_log/current.html") or die "symlink failed: $!";
         }
     }
     exit(0);
