--- a/src/lintel-latex-rebuild.in
+++ b/src/lintel-latex-rebuild.in
@@ -10,7 +10,9 @@ usage() {
     [ "$1" != "" ] && echo "$@"
     echo "Usage: $0"
     echo "  [--tex <path>] [--bib <path>] [--bst <path>] [--paper <paper-size>]"
-    echo "  [--error-on-warnings] [--latex-binary <path>] <srcdir> <main-texfile-basename>"
+    echo "  [--error-on-warnings] [--latex-binary <path>] [--disable-flock]"
+    echo "  [--max-step-time <60 seconds>]"
+    echo "  <srcdir> <main-texfile-basename>"
     echo "-----"
     echo "    <path> is a : separated sequence of paths"
     exit 0
@@ -34,6 +36,7 @@ ERROR_ON_WARNINGS=false
 # was 9000.
 MIN_CROSSREFS=9000
 USE_FLOCK=true
+MAX_STEP_TIME=60
 while $CONTINUE; do
     case "$1" in
 	--tex)
@@ -74,6 +77,12 @@ while $CONTINUE; do
             shift
             USE_FLOCK=false;
             ;;
+	--max-step-time) # maximum amount of time any individual rebuild step may take, abort if reached.
+	    shift
+	    [ $# != 0 ] || usage
+	    MAX_STEP_TIME="$1"
+	    shift
+	    ;;
 	*)
 	    CONTINUE=false
 	    ;;
@@ -110,13 +119,25 @@ if $USE_FLOCK; then
     esac
 fi
 
+run_with_timeout() {
+    echo "Starting $* with timeout $MAX_STEP_TIME"
+    "$@" &
+    WORK_PID=$!
+    (sleep $MAX_STEP_TIME; kill -TERM $WORK_PID) >/dev/null 2>&1 &
+    KILL_PID=$!
+    wait $WORK_PID
+    return_code=$?
+    kill -INT $KILL_PID >/dev/null 2>&1
+    return $return_code
+}
+
 rebuild_latex() {
     echo -n " latex"
     echo "" >>$TEXFILE.rebuild.out
     echo "--------------------------------------------------" >>$TEXFILE.rebuild.out
     echo "---                rebuild latex               ---" >>$TEXFILE.rebuild.out
     echo "--------------------------------------------------" >>$TEXFILE.rebuild.out
-    $LATEX_COMMAND $TEXFILE.tex </dev/null >>$TEXFILE.rebuild.out 2>&1
+    run_with_timeout $LATEX_COMMAND $TEXFILE.tex </dev/null >>$TEXFILE.rebuild.out 2>&1
     latex_err=$?
     case $LATEX_COMMAND in
 	# perltex drops the exit code from latex so we have to infer it from the output.
@@ -131,7 +152,7 @@ rebuild_bibtex() {
         echo "--------------------------------------------------" >>$TEXFILE.rebuild.out
         echo "---               rebuild bibtex               ---" >>$TEXFILE.rebuild.out
         echo "--------------------------------------------------" >>$TEXFILE.rebuild.out
-        @BIBTEX_COMPILER@ --min-crossrefs=$MIN_CROSSREFS $TEXFILE >>$TEXFILE.rebuild.out 2>&1
+        run_with_timeout @BIBTEX_COMPILER@ --min-crossrefs=$MIN_CROSSREFS $TEXFILE >>$TEXFILE.rebuild.out 2>&1
         bibtex_err=$?
     else
 	echo -n " (skip-bibtex-no-citations)"
