36/LDA: small change allows MTN_SERVER to be specified with           an optional leading 'ssh:', if mtn_over_ssh is required.           Works for pull/publish through a vpn (if needed).

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -2193,6 +2193,11 @@ sub mtnOp {
     my $syncbranch = $branch;
     $syncbranch =~ s!^(.*/.*)/.*$!$1!o;
     my $server = mtnServer();
+    my $maybe_proto= substr($server,0,4);
+    if ($maybe_proto eq "ssh:") {
+        $server = $server . basename($database);
+    }
+
     runCommand("mtn","-d",$database,$op,$server,"$syncbranch*");
     runCommand("mtn","-d",$database,'heads','-b',$branch);
 }
